--- a/heyuedi.plist
+++ b/heyuedi.plist
@@ -23,7 +23,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>HeYueDi</string>
+				<string>合约帝</string>
 			</dict>
 		</dict>
 	</array>
